[tool.poetry]
name = "python-fastapi"
version = "0.1.0"
description = ""
authors = ["4roring <4roring@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
pymysql = "^1.1.0"
aiomysql = "^0.2.0"
fastapi = {extras = ["all"], version = "^0.110.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
