[tool.poetry]
name = "python-fastapi"
version = "0.1.0"
description = ""
authors = ["4roring <4roring@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
pymysql = "^1.1.0"
aiomysql = "^0.2.0"
fastapi = {extras = ["all"], version = "^0.110.0"}
locust = "^2.24.0"
cryptography = "^42.0.5"
pytest = "^8.1.1"
anyio = "^4.3.0"
pytest-trio = "^0.8.0"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
"."
]